--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 *.Rproj
-.httr-oauth
 .RProfile
 .Rproj.user
 .Rhistory
 .RData
-rdfp_token.rds
-rdfp_options.rds
-setup.tar
-misc/*
-inst/doc
+token.rds
+.httr-oauth
