Fix Check Errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ importFrom(httr,content)
 importFrom(httr,stop_for_status)
 importFrom(httr,upload_file)
 importFrom(mime,guess_type)
+importFrom(stats,runif)
 importFrom(stringi,stri_split_boundaries)
 importFrom(stringi,stri_trans_totitle)
 importFrom(stringi,stri_trim_both)
