Add pkgdown site

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,12 +1,20 @@
-.Rprofile
-^.*\.RData$
-^.*\.Rhistory$
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^\.travis\.yml$
-^\.httr-oauth$
-^cran-comments\.md$
+.Rprofile
 ^README\.Rmd$
 ^README-.*\.png$
-^.git$
-^example-site
+^index\.Rmd$
+^index\.md$
+^LICENSE\.md$
+^CONDUCT\.md$
+^cran-comments\.md$
+^\.travis\.yml$
+^codecov\.yml$
+^appveyor\.yml$
+^_pkgdown\.yml$
+^\.httr-oauth$
+^docs$
+^tic\.R$
+man-roxygen
+tests/testthat/googlesites.tar.enc
+tests/testthat/.httr-oauth
