--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,37 @@
+before_install:
+- openssl aes-256-cbc -K $encrypted_1dc87c48a126_key -iv $encrypted_1dc87c48a126_iv -in tests/testthat/googlesites.tar.enc -out tests/testthat/googlesites.tar -d
+- tar xvf tests/testthat/googlesites.tar -C tests/testthat
+- R -q -e 'install.packages(c("remotes", "curl")); remotes::install_github("ropenscilabs/tic");
+  tic::prepare_all_stages(); tic::before_install()'
+install: R -q -e 'tic::install()'
+after_install: R -q -e 'tic::after_install()'
+before_script: R -q -e 'tic::before_script()'
+script: R -q -e 'tic::script()'
+after_success: R -q -e 'tic::after_success()'
+after_failure: R -q -e 'tic::after_failure()'
+before_deploy: R -q -e 'tic::before_deploy()'
+deploy:
+  provider: script
+  script: R -q -e 'tic::deploy()'
+  on:
+    all_branches: true
+after_deploy: R -q -e 'tic::after_deploy()'
+after_script: R -q -e 'tic::after_script()'
 language: r
-sudo: required
-warnings_are_errors: false
-r_check_args: "--no-build-vignettes --no-manual --timings"
-notifications:
-  email:
-    on_success: change
-    on_failure: change
+sudo: false
+dist: trusty
+cache: packages
+latex: false
+matrix:
+  include:
+  - r: oldrel
+  - r: release
+    env:
+    - BUILD_PKGDOWN: true
+  - r: devel
 env:
   global:
-  - CRAN: http://cran.rstudio.com
-  - NOT_CRAN: true
-r_github_packages:
-- jimhester/covr
-r_packages:
-- httr
-- xml2
-- curl
-- googleAuthR
-- stringi
-- dplyr
-- plyr
-- mime
-- lubridate
-- rmarkdown
-- testthat
-after_success:
-- Rscript -e 'library(covr);codecov()'
+  - _R_CHECK_FORCE_SUGGESTS_=false
+  - MAKEFLAGS="-j 2"
+  - TRAVIS_CXXFLAGS="-Wall -Wextra -pedantic -Werror"
+services: 
